fixed: spaces are not showing in context description

--- a/src/styles/components/chat/_chat-command-selector.scss
+++ b/src/styles/components/chat/_chat-command-selector.scss
@@ -144,10 +144,11 @@
                     flex: 0 1 auto;
                     overflow: hidden;
                     max-height: var(--mynah-line-height);
+                    height: var(--mynah-line-height);
                 }
                 > span:first-child {
                     white-space: normal;
-                    word-break: break-all;
+                    word-break: break-word;
                     text-align: left;
                 }
 
